--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-    "arduino.useArduinoCli": true
+    "arduino.useArduinoCli": true,
+    "presentation-mode.configBackup": {
+        "editor.fontSize": "undefined",
+        "editor.matchBrackets": "undefined",
+        "editor.minimap.enabled": "undefined",
+        "editor.scrollbar.verticalScrollbarSize": "undefined",
+        "workbench.activityBar.visible": "undefined",
+        "workbench.statusBar.visible": "undefined",
+        "workbench.colorTheme": "undefined",
+        "workbench.colorCustomizations": "undefined",
+        "window.zoomLevel": "undefined"
+    }
 }
